Mejora layout página y parser

--- a/parser.ipynb
+++ b/parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -38,140 +38,14 @@
      "output_type": "stream",
      "text": [
       "------------------------------------------------------------\n",
-      "titulo                                                       NaN\n",
-      "parrafos                                                     NaN\n",
-      "articulo                                                     NaN\n",
-      "texto                                                        NaN\n",
-      "lista                                                        NaN\n",
-      "sublista       El actuar de la Comisión tendrá como base y ej...\n",
-      "subsublista                                                  NaN\n",
-      "Name: 431, dtype: object\n",
-      "------------------------------------------------------------\n",
-      "titulo                                                       NaN\n",
-      "parrafos                                                     NaN\n",
-      "articulo                                                     NaN\n",
-      "texto                                                        NaN\n",
-      "lista                                                        NaN\n",
-      "sublista       Este principio, vinculado a la descentralizaci...\n",
-      "subsublista                                                  NaN\n",
-      "Name: 433, dtype: object\n",
-      "------------------------------------------------------------\n",
-      "titulo                                                       NaN\n",
-      "parrafos                                                     NaN\n",
-      "articulo                                                     NaN\n",
-      "texto                                                        NaN\n",
-      "lista                                                        NaN\n",
-      "sublista       Se establece un orden de prioridad en la radic...\n",
-      "subsublista                                                  NaN\n",
-      "Name: 435, dtype: object\n",
-      "------------------------------------------------------------\n",
-      "titulo                                                       NaN\n",
-      "parrafos                                                     NaN\n",
-      "articulo                                                     NaN\n",
-      "texto                                                        NaN\n",
-      "lista                                                        NaN\n",
-      "sublista       Este principio promueve un trato diferenciado ...\n",
-      "subsublista                                                  NaN\n",
-      "Name: 437, dtype: object\n",
-      "------------------------------------------------------------\n",
-      "titulo                                                       NaN\n",
-      "parrafos                                                     NaN\n",
-      "articulo                                                     NaN\n",
-      "texto                                                        NaN\n",
-      "lista                                                        NaN\n",
-      "sublista       Este principio sugiere la promoción de modalid...\n",
-      "subsublista                                                  NaN\n",
-      "Name: 439, dtype: object\n",
-      "------------------------------------------------------------\n",
-      "titulo                                                       NaN\n",
-      "parrafos                                                     NaN\n",
-      "articulo                                                     NaN\n",
-      "texto                                                        NaN\n",
-      "lista                                                        NaN\n",
-      "sublista       En la práctica, resulta común que distintos en...\n",
-      "subsublista                                                  NaN\n",
-      "Name: 440, dtype: object\n",
-      "------------------------------------------------------------\n",
-      "titulo                                                       NaN\n",
-      "parrafos                                                     NaN\n",
-      "articulo                                                     NaN\n",
-      "texto                                                        NaN\n",
-      "lista                                                        NaN\n",
-      "sublista       Este principio promueve la eficiencia, la prob...\n",
-      "subsublista                                                  NaN\n",
-      "Name: 442, dtype: object\n",
-      "------------------------------------------------------------\n",
-      "titulo                                                       NaN\n",
-      "parrafos                                                     NaN\n",
-      "articulo                                                     NaN\n",
-      "texto                                                        NaN\n",
-      "lista                                                        NaN\n",
-      "sublista       Contemplar las autonomías plurinacionales como...\n",
-      "subsublista                                                  NaN\n",
-      "Name: 444, dtype: object\n",
-      "------------------------------------------------------------\n",
-      "titulo                                                       NaN\n",
-      "parrafos                                                     NaN\n",
-      "articulo                                                     NaN\n",
-      "texto                                                        NaN\n",
-      "lista                                                        NaN\n",
-      "sublista       Los procesos políticos e institucionales a tra...\n",
-      "subsublista                                                  NaN\n",
-      "Name: 446, dtype: object\n",
-      "------------------------------------------------------------\n",
-      "titulo                                                       NaN\n",
-      "parrafos                                                     NaN\n",
-      "articulo                                                     NaN\n",
-      "texto                                                        NaN\n",
-      "lista                                                        NaN\n",
-      "sublista       Este principio debe orientar la construcción d...\n",
-      "subsublista                                                  NaN\n",
-      "Name: 448, dtype: object\n",
-      "------------------------------------------------------------\n",
-      "titulo                                                       NaN\n",
-      "parrafos                                                     NaN\n",
-      "articulo                                                     NaN\n",
-      "texto                                                        NaN\n",
-      "lista                                                        NaN\n",
-      "sublista       Principio que debe orientar las propuestas de ...\n",
-      "subsublista                                                  NaN\n",
-      "Name: 450, dtype: object\n",
-      "------------------------------------------------------------\n",
-      "titulo                                                       NaN\n",
-      "parrafos                                                     NaN\n",
-      "articulo                                                     NaN\n",
-      "texto                                                        NaN\n",
-      "lista                                                        NaN\n",
-      "sublista       Los distintos territorios deben propender a la...\n",
-      "subsublista                                                  NaN\n",
-      "Name: 452, dtype: object\n",
-      "------------------------------------------------------------\n",
-      "titulo                                                       NaN\n",
-      "parrafos                                                     NaN\n",
-      "articulo                                                     NaN\n",
-      "texto                                                        NaN\n",
-      "lista                                                        NaN\n",
-      "sublista       Este principio se debe dar sobre la base de la...\n",
-      "subsublista                                                  NaN\n",
-      "Name: 453, dtype: object\n",
-      "------------------------------------------------------------\n",
-      "titulo                                                       NaN\n",
-      "parrafos                                                     NaN\n",
-      "articulo                                                     NaN\n",
-      "texto                                                        NaN\n",
-      "lista                                                        NaN\n",
-      "sublista       Orientado a consagrar los mecanismos que permi...\n",
-      "subsublista                                                  NaN\n",
-      "Name: 455, dtype: object\n",
-      "------------------------------------------------------------\n",
-      "titulo                                                       NaN\n",
-      "parrafos                                                     NaN\n",
-      "articulo                                                     NaN\n",
-      "texto                                                        NaN\n",
-      "lista                                                        NaN\n",
-      "sublista       Para efectos de las materias, objetivos, princ...\n",
-      "subsublista                                                  NaN\n",
-      "Name: 457, dtype: object\n",
+      "titulo         NaN\n",
+      "parrafos       NaN\n",
+      "articulo       NaN\n",
+      "texto          NaN\n",
+      "lista          NaN\n",
+      "sublista       NaN\n",
+      "subsublista    NaN\n",
+      "Name: 320, dtype: object\n",
       "------------------------------------------------------------\n",
       "titulo         NaN\n",
       "parrafos       NaN\n",
@@ -182,10 +56,9 @@
       "subsublista    NaN\n",
       "Name: 795, dtype: object\n",
       "{'contenido': [],\n",
-      " 'descripcion': nan,\n",
+      " 'descripcion': 'Disposiciones transitorias',\n",
       " 'tipo': 'titulo',\n",
-      " 'titulo': 'Aprobado en sesiones de fecha 14, 23, 27, 28 y 29 de septiembre de '\n",
-      "           '2021.'}\n"
+      " 'titulo': 'Disposiciones transitorias'}\n"
      ]
     }
    ],
